--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/post.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/post.html
@@ -97,7 +97,7 @@
     function fuwenben() {
         var E = window.wangEditor
         Htmleditor = new E('#toolbar','#html-container')
-        Htmleditor.customConfig.uploadImgServer = '/admin/upload'  // 上传图片到服务器
+        Htmleditor.customConfig.uploadImgServer = '/common/uploadImg'  // 上传图片到服务器
         Htmleditor.customConfig.uploadImgTimeout = 300000000
         Htmleditor.customConfig.uploadFileName = 'file'
         Htmleditor.customConfig.debug = true
