--- a/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/list.html
+++ b/ListeningrainBlog/ListeningrainBlog_rest/src/main/resources/templates/default/admin/list.html
@@ -35,7 +35,7 @@
                            <td><span th:text="${content.hits}"/></td>
                            <td><span class="label label-success" th:text="已发布"/> </td>
                            <td><span th:text="${content.categories}"/></td>
-                           <td><a href="javascript:void(0)"  th:onclick="'javascript:editLink('+${content.cid}+')'"
+                           <td><a th:href="@{'/admin/index/editContent?cid='+${content.cid}}"
                                   class="btn btn-primary btn-sm waves-effect waves-light m-b-5"><i
                                    class="fa fa-edit"></i> <span>编辑</span></a>
                                <a href="javascript:void(0)" th:onclick="'javascript:delLink('+${content.cid}+')'"
@@ -54,10 +54,10 @@
                            <td><span class="label label-default" th:text="草稿"/></td>
                            <td><span th:text="${content.categories}"/></td>
                            <td>
-                               <a href="javascript:void(0)"  th:onclick="'javascript:editLink('+${content.cid}+')'"
+                               <a  th:href="@{'/admin/index/editContent?cid='+${content.cid}}"
                                   class="btn btn-primary btn-sm waves-effect waves-light m-b-5"><i
                                        class="fa fa-edit"></i> <span>编辑</span></a>
-                               <a href="javascript:void(0)" th:onclick="'javascript:delLink('+${content.cid}+')'"
+                               <a href="javascript:void(0)" th:onclick="'javascript:delContent('+${content.cid}+')'"
                                   class="btn btn-danger btn-sm waves-effect waves-light m-b-5"><i
                                        class="fa fa-trash-o"></i> <span>删除</span></a>
                            </td>
